--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,890</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">englishTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">15,126</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">frenchTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,384</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">31,510</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.CreateLead</td><td><a href="#m0">runCreateLead</a></td><td rowspan="1">1612064626433</td><td rowspan="1">6422</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">englishTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.EditLead</td><td><a href="#m0">runEditLead</a></td><td rowspan="1">1612282436402</td><td rowspan="1">11163</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">frenchTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.EditLead</td><td><a href="#m1">runEditLead</a></td><td rowspan="1">1612282436416</td><td rowspan="1">12410</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testcases.CreateLead#runCreateLead</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Wirpo</td><td>Karthik</td><td>Gunasekaran</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>englishTest</h2><h3 id="m0">testcases.EditLead#runEditLead</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>10010</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>frenchTest</h2><h3 id="m1">testcases.EditLead#runEditLead</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>10010</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
