--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e58dcd">  <td>21/01/30 17:25:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.launchApplication()[pri:0, instance:testcases.LoginPageTestCase@74a10858]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@1400106113</td>   <td></td> </tr>
-<tr bgcolor="e58dcd">  <td>21/01/30 17:25:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.launchApplication()[pri:0, instance:testcases.CreateLead@8e24743]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@156832838</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>21/01/30 17:25:12</td>   <td>3550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestCase.executeLogin()[pri:0, instance:testcases.LoginPageTestCase@74a10858]">executeLogin</td> 
-  <td>TestNG-test=Test-2@1400106113</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>21/01/30 17:25:13</td>   <td>3588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLead.runCreateLead()[pri:0, instance:testcases.CreateLead@8e24743]">runCreateLead</td> 
-  <td>TestNG-test=Test-1@156832838</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>21/02/02 21:43:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;EditLead.getExcel()[pri:0, instance:testcases.EditLead@1fc2b765]">&gt;&gt;getExcel</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1990618190</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>21/02/02 21:43:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;EditLead.getExcel()[pri:0, instance:testcases.EditLead@481a15ff]">&gt;&gt;getExcel</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1930663535</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>21/02/02 21:43:52</td>   <td>476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.launchApplication(java.lang.String)[pri:0, instance:testcases.EditLead@1fc2b765]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1990618190</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>21/02/02 21:43:52</td>   <td>476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.launchApplication(java.lang.String)[pri:0, instance:testcases.EditLead@481a15ff]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1930663535</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>21/02/02 21:43:56</td>   <td>3943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditLead.runEditLead(java.lang.String)[pri:0, instance:testcases.EditLead@1fc2b765]">runEditLead</td> 
+  <td>TestNG-tests-1@1990618190</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>21/02/02 21:43:56</td>   <td>3957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditLead.runEditLead(java.lang.String)[pri:0, instance:testcases.EditLead@481a15ff]">runEditLead</td> 
+  <td>TestNG-tests-2@1930663535</td>   <td></td> </tr>
 </table>
