--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84f66b">  <td>21/02/02 20:57:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;EditLead.getExcel()[pri:0, instance:testcases.EditLead@43738a82]">&gt;&gt;getExcel</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673068808</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>21/02/02 20:57:34</td>   <td>484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditLead.runEditLead(java.lang.String)[pri:0, instance:testcases.EditLead@43738a82]">runEditLead</td> 
-  <td>main@673068808</td>   <td></td> </tr>
+<tr bgcolor="89daf3">  <td>21/02/21 18:33:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CreateLead.getExcel()[pri:0, instance:testcases.CreateLead@2de8284b]">&gt;&gt;getExcel</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@369241501</td>   <td></td> </tr>
+<tr bgcolor="89daf3">  <td>21/02/21 18:33:23</td>   <td>609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLead.runCreateLead(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testcases.CreateLead@2de8284b]">runCreateLead</td> 
+  <td>main@369241501</td>   <td></td> </tr>
 </table>
